[gd_scene load_steps=5 format=3 uid="uid://lteqvs7mwld4"]

[ext_resource type="Script" path="res://UI/Crafting/costs_item.gd" id="1_bujdl"]
[ext_resource type="Resource" uid="uid://bckiex7mctva7" path="res://Resources/Items/drill.tres" id="2_eel34"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="3_n6sk3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6uqyt"]
atlas = ExtResource("3_n6sk3")
region = Rect2(96, 208, 16, 16)

[node name="CraftingRowItem" type="MarginContainer"]
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4
script = ExtResource("1_bujdl")
item_data = ExtResource("2_eel34")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_6uqyt")
expand_mode = 2
stretch_mode = 3

[node name="ItemNameLabel" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Drill"

[node name="AmountMargin" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="AmountLabel" type="Label" parent="HBoxContainer/AmountMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Amount: 1"
